--- a/test/index.html
+++ b/test/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>Testigo Specs</title>
-	<link rel="stylesheet" href="assets/style.css" />
-	<script type="text/javascript" src="testigo/Source/runners/html/assets/mootools.js"></script>
-	<script type="text/javascript" src="testigo/Source/runners/html/assets/runner.js"></script>
+	<link rel="stylesheet" href="./testigo/runners/html/assets/style.css" />
+	<script type="text/javascript" src="./testigo/runners/html/assets/mootools.js"></script>
+	<script type="text/javascript" src="./testigo/runners/html/assets/runner.js"></script>
 </head>
 <body>
 	<div id="wrapper">
