--- a/test/tests.html
+++ b/test/tests.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html>
 <head>
-	<script type="text/javascript" src="assets/require.js"></script>
+	<script type="text/javascript" src="../scripts/require.js"></script>
 	<script type="text/javascript">
 		window.runTests = function(){};
-		require.paths.unshift('/Source/');
-		var Testigo = require('../Source/testigo').Testigo,
+		var Testigo = require('./testigo').Testigo,
 			Tests = new Testigo();
 		Tests.setCallbacks({
 			describe: function(suite){
@@ -23,7 +22,8 @@
 			afterTest: function(suite, test, results){
 				window.top.addTest(suite, test, results);
 			}
-		});
+        });
+        require('./browser').setup(Tests);
 		window.runTests = function(){ Tests.run(); }
 	</script>
 </head>
