Hello world - inline comments added

--- a/examples/hello/index.html
+++ b/examples/hello/index.html
@@ -5,5 +5,7 @@
         <script type="text/javascript" src="../../scripts/require.js" data-main="/examples/hello/"></script>
     </head>
     <body>
+        <div id='example'></div>
+        <p>Text above will update when the text field will be changed.</p>
     </body>
 </html>
